--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -1,26 +1,26 @@
 {{ "<!-- ENTERING partial footer1.html -->" | safeHTML }}
-<footer class="footer has-text-centered notification is-dark is-marginless">
-
+<footer class="footer notification is-dark is-marginless">
   <div class="container">
-
      <div class="columns">
-      <div class="column is-8-desktop is-offset-2-desktop">
-        <p>
-          <strong class="has-text-weight-semibold">
-            <a href="https://www.npmjs.com/package/bulma-start">bulma-start@0.0.1</a>
-          </strong>
-        </p>
-        <p>
-          <small>
-            COPYRIGHT {{ now.Format "2006" }} TestSource code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
-          </small>
-        </p>
-        <p style="margin-top: 1rem;">
-          <a href="http://bulma.io">
-            <img src="made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
-          </a>
-        </p>
+
+      <div class="column is-three-fifths is-offset-one-fifth">
+
+            <p>&copy;1999-{{ now.Format "2006" }} {{ i18n "footerallrightsreserved"}}</p>
+            <a class="link" href="/">{{ i18n "genhomename" }}</a>
+            <a class="link" href="/license">{{ i18n "genlicensename" }}</a>
+            <a class="link" href="/colophon">{{ i18n "gencolophonname" }}</a>
+            <br>
+            <br>
+            <p class="buttons">
+             <a class="button is-grey-light is-small" href="https://plus.google.com/+Esolia/posts" target="_blank"><span class="icon is-small has-text-esolia-blue-1"><i class="fab fa-google"></i></span></a>
+             <a class="button is-grey-light is-small" href="https://twitter.com/esolia_inc" target="_blank"><span class="icon is-small has-text-esolia-blue-1"><i class="fab fa-twitter"></i></span></a>
+             <a class="button is-grey-light is-small" href="http://www.linkedin.com/company/esolia-inc" target="_blank"><span class="icon is-small has-text-esolia-blue-1"><i class="fab fa-linkedin"></i></span></a>
+             <a class="button is-grey-light is-small" href="http://www.facebook.com/eSolia" target="_blank"><span class="icon is-small has-text-esolia-blue-1"><i class="fab fa-facebook"></i></span></a>
+             <a class="button is-grey-light is-small" href="https://vimeo.com/channels/esolia" target="_blank"><span class="icon is-small has-text-esolia-blue-1"><i class="fab fa-vimeo"></i></span></a>
+            </p>
+
       </div>
+
     </div>
   </div>
 </footer>
