--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -39,6 +39,9 @@
         {{ if isset .Params "formcheckboxes" }}
           {{- partial "form-moreinfo.html" . -}}
         {{ end }}
+        {{if isset .Params "gallery_id" }}
+           {{ partial "gallery.html" . }}
+        {{ end }}
       </div>
   </div>
 </div>
