--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -427,3 +427,10 @@ text-decoration: none;
 table.fs-grid div.markup p a:hover {
 color: $link-hover;
 }
+
+// Search
+
+mark {
+background-color: $esolia-secondary-1-0;
+color: white;
+}
