Work on text in Home

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -51,26 +51,31 @@
     <section class="section has-margin-l-xl has-margin-r-xl">
     <div class="tile is-ancestor">
         <div class="tile is-parent is-shaded">
-          <article class="tile is-child box notification is-info">
+          <article class="tile is-child box notification is-esolia-secondary-2-3">
+            <p class="title">{{ i18n "compName" }}</p>
+            <p class="subtitle">{{ i18n "strongfoundations" }}</p>
+            <p>{{ i18n "topsectionintrotext" | safeHTML }}</p>
+          </article>
+        </div>
+
+        <div class="tile is-parent is-shaded">
+          <article class="tile is-child box notification is-esolia-blue-3">
             <p class="title">{{ i18n "topsectionwwd" }}</p>
             <p class="subtitle">{{ i18n "topsectionwwdsub" }}</p>
             <p>{{ i18n "topsectionwwdtext" | safeHTML }}</p>
           </article>
         </div>
-        <div class="tile is-parent">
-          <article class="tile is-child box notification is-link">
-            <p class="title">Two</p>
-            <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+
+        <div class="tile is-parent is-shaded">
+          <article class="tile is-child box notification is-esolia-yellow-3">
+            <p class="title">{{ i18n "topsectiontr" }}</p>
+            <p class="subtitle">{{ i18n "topsectiontrsub" }}</p>
+            <p>{{ i18n "topsectiontrtext" | safeHTML }}</p>
           </article>
         </div>
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="title">Three</p>
-            <p class="subtitle">Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
-          </article>
-        </div>
-        <div class="tile is-parent">
-          <article class="tile is-child box">
+
+        <div class="tile is-parent is-shaded">
+          <article class="tile is-child box notification is-esolia-secondary-1-4">
             <p class="title">Four</p>
             <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
           </article>
@@ -85,7 +90,7 @@
                 <p class="title">Five</p>
                 <p class="subtitle">Subtitle</p>
                 <div class="content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
+                  <p>5 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
 
 
 
@@ -96,15 +101,15 @@
               <div class="tile">
                 <div class="tile is-parent">
                   <article class="tile is-child box">
-                    <p class="title">Six</p>
-                    <p class="subtitle">Subtitle</p>
+                    <figure class="image">
+                      <img src="/img/eSolia-Logo-Flat-2015.png"></img>
+                    </figure>
                   </article>
                 </div>
                 <div class="tile is-parent">
                   <article class="tile is-child box">
-                    <figure class="image">
-                      <img src="/img/eSolia-Logo-Flat-2015.png"></img>
-                    </figure>
+                    <p class="title">Six</p>
+                    <p class="subtitle">Subtitle</p>
                   </article>
                 </div>
               </div>
