Continuing editing of Home page

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -76,8 +76,9 @@
 
         <div class="tile is-parent is-shaded">
           <article class="tile is-child box notification is-esolia-secondary-1-4">
-            <p class="title">Four</p>
-            <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+            <p class="title">{{ i18n "topsectionwhy" }}</p>
+            <p class="subtitle">{{ i18n "topsectionwhysub" }}</p>
+            <p>{{ i18n "topsectionwhytext" | safeHTML }}</p>
           </article>
         </div>
       </div>
