More work on home. Add video.

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -54,7 +54,7 @@
           <article class="tile is-child box notification is-esolia-secondary-2-3">
             <p class="title">{{ i18n "compName" }}</p>
             <p class="subtitle">{{ i18n "strongfoundations" }}</p>
-            <p>{{ i18n "topsectionintrotext" | safeHTML }}</p>
+            <p>{{ i18n "topsectionintrotext" | safeHTML | markdownify }}</p>
           </article>
         </div>
 
@@ -88,14 +88,9 @@
           <div class="tile">
             <div class="tile is-parent">
               <article class="tile is-child box">
-                <p class="title">Five</p>
-                <p class="subtitle">Subtitle</p>
-                <div class="content">
-                  <p>5 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
-
-
-
-                </div>
+                <p class="title">{{ i18n "topsectionvideo" }}</p>
+                <p class="is-italic">{{ i18n "topsectionvideosub" }}</p>
+                     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/78135284" style="position:absolute;left:0;top:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
               </article>
             </div>
             <div class="tile is-8 is-vertical">
