Fix margins on main, in inner pages

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -48,7 +48,7 @@
       </svg>
 
     </section>
-    <section class="section has-margin-l-xl has-margin-r-xl">
+    <section class="section">
     <div class="tile is-ancestor">
         <div class="tile is-parent is-shaded">
           <article class="tile is-child box notification is-esolia-secondary-2-3">
