--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -32,7 +32,7 @@
 
   </div>
   <div class="column is-main-content">
-      <div class="box content is-medium has-margin-m has-padding-l-xl has-padding-b-xxl">
+      <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m">
         <p class="title is-5"><h1>{{ .Title }}</h1></p>
         <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
 
