--- a/layouts/taxonomy/topic.html
+++ b/layouts/taxonomy/topic.html
@@ -32,7 +32,7 @@
 
   </div>
   <div class="column is-main-content">
-      <div class="box content is-medium has-margin-m has-padding-l-xl has-padding-b-xxl">
+      <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m">
         <p class="title is-5"><h1 class="has-text-esolia-blue-0">{{ if eq .Lang "en" }}{{ i18n "topicsWithTopics" }}{{ end }}&laquo;{{ .Title | upper}}&raquo; {{ if eq .Lang "ja" }}{{ i18n "topicsWithTopics" }}{{ end }}</h1></p>
         {{ range .Data.Pages.GroupByDate "2006" }}
         <h2 class="has-text-esolia-yellow-3">{{ .Key }}</h2>
