About page logo to svg and make map responsive

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -434,3 +434,19 @@ mark {
 background-color: $esolia-secondary-1-0;
 color: white;
 }
+
+// Map Reponsiveness
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
