--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -13,6 +13,20 @@
 
   <div class="navbar-menu" id="navMenu">
     <div class="navbar-start">
+
+      {{ if .context.IsTranslated }}
+      {{ range .context.Translations }}
+      <a class="button is-small {{ $.langswcolor }} is-rounded has-margin-l-s is-hidden-tablet" href="{{ .Permalink }}">{{ .Site.Language.LanguageName }}</a>
+      {{ end }}
+      {{ else }}
+      {{ if eq .Site.Language.Lang "en" }}
+      <a class="button is-small {{ $.langswcolor }} is-rounded has-margin-l-s is-hidden-tablet" href="/">日本語</a>
+      {{ else }}
+      <a class="button is-small {{ $.langswcolor }} is-rounded has-margin-l-s is-hidden-tablet" href="/">English</a>
+      {{ end }}
+      {{ end }}
+
+
       {{ if not .context.IsHome }}
       <a class="navbar-item" href="{{ .context.Site.BaseURL }}">
         <span class="icon"><i class="fas fa-home {{ .naviconcolor }}"></i></span>
