Attempt to add desktop only padding but it overrides other m and p so NG

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -450,3 +450,11 @@ color: white;
     width:100%;
     position:absolute;
 }
+
+// Desktop-only padding
+
+@media only screen and (min-width: 1025px) {
+        .esolia-main-inner-desktop {
+            padding-left: 30px;
+        }
+    }
